Modify Palindrome partitioning to use self-implemented LinkedLists